# faster-base64

./: Cargo.toml  README.md  generate_tables.py
benches/: decode_fb64.rs  decode_stdb64.rs  encode_fb64.rs  encode_stdb64.rs
src/: lib.rs  tables.rs
